cluster/app-02/pod.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-02-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-02-deploy
  template:
    metadata:
      labels:
        app: app-02-deploy
    spec:
      nodeSelector:
        environment: devfe
      containers:
      - name: app-02
        image: pnsmiling/phong
        ports:
        - containerPort: 80
          name: app-02-port
        resources:
            requests:
              cpu: "0.5"
              memory: "150Mi"
            limits:
              cpu: "1"
              memory: "250Mi"
        volumeMounts: 
        - name: sc-store-01
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: sc-store-01
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "sc-provider-env-02"
