cluster/app-02/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-02-appservice
spec:
  selector:
    app: app-02-deploy
  ports:
    - name: app-02-port
      port: 80
      targetPort: 80
  type: ClusterIP
